package DTO;

public class ProfiloDTO {



}
