package DTO;

public class Raccolta {



}
