@startuml
package database {
  class DatabaseConnection {
    - {static} URL: String
    - {static} USER: String
    - {static} PASSWORD: String
    - DatabaseConnection()
    + {static} getConnection(): Connection
    + {static} executeQuery(String, Object...): ResultSet
    + {static} executeUpdate(String, Object...): int
    + {static} executeUpdateConID(String, Object...): int
  }

  package DAO {
    class UserDAO {
      - UserDAO()
      + {static} getUserByEmail(String): User
      + {static} addUser(User): boolean
    }

    class PoesiaDAO {
      - PoesiaDAO()
      + {static} getUltimePoesiePerFeed(int, int): List<Poesia>
      + {static} getPoesieByAutore(int): List<Poesia>
      + {static} addPoesia(Poesia): boolean
    }

    class ProfiloDAO {
      - ProfiloDAO()
      + {static} getProfiloAtID(int): Profilo
      + {static} updateProfilo(Profilo, int): void
      + {static} createProfilo(Profilo, int): void
    }

    class RaccoltaDAO {
      - RaccoltaDAO()
      + {static} addRaccolta(Raccolta): int
      + {static} getRaccoltaPerAutore(int): List<Raccolta>
    }

    class CuoreDAO {
      - CuoreDAO()
      + {static} addCuore(int, int): boolean
      + {static} removeCuore(int, int): boolean
      + {static} getNumCuori(int): int
      + {static} hasUserLiked(int, int): boolean
    }

    class CommentoDAO {
      - CommentoDAO()
      + {static} addCommento(Commento): void
      + {static} getCommentiByPoesiaId(int): List<Commento>
    }
  }

  UserDAO ..> DatabaseConnection
  PoesiaDAO ..> DatabaseConnection
  ProfiloDAO ..> DatabaseConnection
  RaccoltaDAO ..> DatabaseConnection
  CuoreDAO ..> DatabaseConnection
  CommentoDAO ..> DatabaseConnection
}

package entity {
  class User {}
  class Poesia {}
  class Profilo {}
  class Raccolta {}
  class Commento {}
}

UserDAO ..> entity.User
UserDAO ..> ProfiloDAO
PoesiaDAO ..> entity.Poesia
ProfiloDAO ..> entity.Profilo
RaccoltaDAO ..> entity.Raccolta
CommentoDAO ..> entity.Commento

@enduml